[package]
name = "md_to_tex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {features = ["derive"], version = "4.4.6"}
lazy_static = "1.4.0"
regex = "1.10.0"
anyhow = "1.0.80"
smallvec = "1.13.2"
itertools = "0.13.0"
